syntax = "proto3";

package broker;

option go_package = "github.com/FelipeFernandezUSM/lab-5-distribuidos-prueba-1/proto";

service Broker {
  rpc RedirigirIngeniero (RequestIngeniero) returns (DireccionFullcrum) {}
  rpc Mediate (Mensaje) returns (Notificacion) {}
}

message RequestIngeniero {
  string command = 1;
}

message DireccionFullcrum {
  string address = 1;
}

message Mensaje {
    string sector = 1;
    string base = 2;
    repeated int32 VectorClock = 3;
    string clientId = 4;
}

message Notificacion {
    string notif = 1;
    string FulcrumServer = 2;
    repeated int32 VectorClock = 3;
}